--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,4 +1,8 @@
 <div [ngClass]="{'article':  true, 'checked' : checked}" (click)="onPanelClick()">
-    <div class="help" id="question" (click)="onHelpClick($event)">
+    <div class="help" id="question" 
+            (click)="onHelpClick($event)" 
+            (mouseover)="onMouseOver()" 
+            (mouseout)="onMouseOut()">
     </div>
+    {{article.Name}}
 </div>
